--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="sound"></h1>
+    <p><strong>dog, cat, pig</strong>를 입력해보세요.</p>
     <input type="text" id="name">
     <button onclick="getSound()">API 요청</button>
     <script>
